--- a/src/assets/translation/en.json
+++ b/src/assets/translation/en.json
@@ -1,7 +1,7 @@
 {
   "current.language": "en",
   "website.welcome.message": "Finally, you're here",
-  "website.introduction.message": "I am Dieter Jordens. This is my online portfolio. Unfortunately, there is not much to see here at the moment, so be sure to come back in the future.",
+  "website.introduction.message": "I am Dieter Jordens. This is my online portfolio. Feel free to take a look around! My website is still a work in progress, so be sure to come back in a while.",
   "website.details.message": "I'm {{age}} years old and live in Geetbets, Belgium. This is in a close proximity of Leuven, Brussels and Hasselt. I'm passionate about full stack agile software development and artificial intelligence.",
   "website.learn.more.about.my.vision": "My vision",
   "website.change.language": "Change language",
