--- a/src/assets/translation/fr.json
+++ b/src/assets/translation/fr.json
@@ -1,7 +1,7 @@
 {
   "current.language": "fr",
   "website.welcome.message": "Enfin, vous êtes là",
-  "website.introduction.message": "Je suis Dieter Jordens. Voici mon portfolio en ligne. Malheureusement, il n'y a pas grand-chose à voir ici pour le moment, alors n'hésitez pas à revenir dans le futur.",
+  "website.introduction.message": "Je suis Dieter Jordens. Voici mon portfolio en ligne. N'hésitez pas à jeter un coup d'oeil! Mon site web sera plus complet à l'avenir, alors revenez nous voir dans un moment.",
   "website.details.message": "J'ai {{age}} ans et j'habite actuellement à Geetbets, en Belgique. C'est à proximité de Louvain, Bruxelles et Hasselt. Je suis passionné par le le développement de logiciels agiles (full-stack) et l'intelligence artificielle.",
   "website.learn.more.about.my.vision": "Ma vision",
   "website.change.language": "Changer de langue",
