--- a/src/assets/translation/en.json
+++ b/src/assets/translation/en.json
@@ -55,14 +55,17 @@
   "cv.education2.title": "Bachelor of Science: Computer Science, ICT",
   "cv.education2.employer": "University of Hasselt",
   "cv.education2.place": "Diepenbeek, Belgique",
-  "data.books.description": "Here you can find every book I've read since the start of my professional career back in 2016.",
+  "data.books.description": "Click here to see all books I've read since the start of my career.",
   "data.book.title": "Title",
   "data.book.authors": "Authors",
   "data.book.year.read": "Year read",
   "data.books.search": "Search",
-  "data.books.title": "Books",
   "projects.title": "Projects",
   "projects.description": "Here you will find the projects I have done in my career as a consultant. The projects are sorted by start date, the most recent one first.",
   "data.title": "Data",
-  "data.more.data.coming.soon": "More information will be available soon!"
+  "data.more.data.coming.soon": "More information will be available soon!",
+  "data.blogposts.description": "Click here to see all blogposts I've read since the start of my career.",
+  "data.blogpost.title": "Title",
+  "data.blogpost.publicationDate": "Date of publication",
+  "data.blogpost.category": "Category"
 }
