fix translation written.

--- a/src/assets/translation/en.json
+++ b/src/assets/translation/en.json
@@ -64,7 +64,7 @@
   "projects.description": "Here you will find the projects I have done in my career as a consultant. The projects are sorted by start date, the most recent one first.",
   "data.title": "Data",
   "data.more.data.coming.soon": "More information will be available soon!",
-  "data.blogposts.description": "Click here to see all blogposts I've read since the start of my career.",
+  "data.blogposts.description": "Click here to see all blogposts I've written since the start of my career.",
   "data.blogpost.title": "Title",
   "data.blogpost.publicationDate": "Date of publication",
   "data.blogpost.category": "Category"
