--- a/src/assets/translation/fr.json
+++ b/src/assets/translation/fr.json
@@ -64,7 +64,7 @@
   "projects.description": "Vous trouverez ici les projets que j'ai réalisés au cours de ma carrière de consultant. Les projets sont triés par date de début, la plus récente en premier.",
   "data.title": "Données",
   "data.more.data.coming.soon": "Plus d'informations seront bientôt disponibles!",
-  "data.blogposts.description": "Cliquez ici pour voir tous les blogposts que j'ai lus depuis le début de ma carrière.",
+  "data.blogposts.description": "Cliquez ici pour voir tous les blogposts que j'ai écrits depuis le début de ma carrière.",
   "data.blogpost.title": "Titre",
   "data.blogpost.publicationDate": "Date de publication",
   "data.blogpost.category": "Catégorie"
