remove description from the about.

--- a/src/assets/translation/nl.json
+++ b/src/assets/translation/nl.json
@@ -30,7 +30,7 @@
   "my.vision.productive.partnerships.part3": "Ik probeer me altijd in het belang van de klant te vinden om een langdurige relatie op te bouwen.",
   "cv.image": "Curriculum Vitae afbeelding",
   "cv.current.role": "Java Software Craftsman",
-  "cv.about": "Dieter is een gepassioneerd agile software- ontwikkelaar en draagt met trots de titel van Burgerlijk Ingenieur. Op zijn huidig project werkt Dieter voor de federale overheidsdienst Justitie, waar hij meehelpt aan de ontwikkeling van een uitdagende applicatie voor de verwerking en opslag van documenten.",
+  "cv.about": "Dieter is een gepassioneerd agile software- ontwikkelaar en draagt met trots de titel van Burgerlijk Ingenieur. Op zijn huidig project werkt Dieter aan een applicatie voor de federale overheidsdienst Justitie.",
   "cv.body": "Hallo Dieter%0A%0AIk%20zou%20graag%20toegang%20krijgen%20tot%20je%20CV%20omdat%20<vul-reden-in>.%0AMet%20vriendelijke%20groeten%0A%0A<vul-naam-in>",
   "cv.receive": "Ontvang het volledige CV",
   "cv.expertise": "Expertise",
