--- a/src/assets/translation/en.json
+++ b/src/assets/translation/en.json
@@ -30,7 +30,7 @@
   "my.vision.productive.partnerships.part3": "I always try to find myself in the interests of the customer in order to build a long-term relationship.",
   "cv.image": "Curriculum Vitae image",
   "cv.current.role": "Java Software Craftsman",
-  "cv.about": "Dieter is a passionate agile software developer and proudly bears the title of Civil Engineer. On his current project, Dieter works for the Federal Public Service Justice, where he helps to develop a challenging application for the processing and storage of documents.",
+  "cv.about": "Dieter is a passionate agile software developer and proudly bears the title of Civil Engineer. On his current project, Dieter works on an application for the Federal Public Service Justice.",
   "cv.body": "Hi Dieter%0A%0AI%20would%20like%20access%20to%20your%20personal%20resume%20for%20<insert-reason>.%0AKind%20regards%0A%0A<insert-name>",
   "cv.receive": "Receive full resume",
   "cv.expertise": "Expertise",
