add sorting for blogposts.

--- a/src/assets/translation/fr.json
+++ b/src/assets/translation/fr.json
@@ -74,5 +74,5 @@
   "data.certificate.issueDate": "Date d'émission",
   "data.certificate.organization": "L'organisation",
   "data.certificate.type": "Type",
-  "blogpost.title": "Blogposts"
+  "blogpost.title": "Articles de blog"
 }
