--- a/src/assets/translation/en.json
+++ b/src/assets/translation/en.json
@@ -10,6 +10,7 @@
   "website.cv": "CV",
   "website.projects": "Projects",
   "website.blogposts": "Blogposts",
+  "website.books": "Books",
   "website.data": "More data",
   "my.vision.what.to.expect.of.me": "What can you expect of me?",
   "my.vision.what.is.my.vision": "I see Software Development as a craft!",
@@ -56,11 +57,10 @@
   "cv.education2.title": "Bachelor of Science: Computer Science, ICT",
   "cv.education2.employer": "University of Hasselt",
   "cv.education2.place": "Diepenbeek, Belgique",
-  "data.books.description": "Click here to see all books I've read since the start of my career.",
-  "data.book.title": "Title",
-  "data.book.authors": "Authors",
-  "data.book.year.read": "Year read",
-  "data.books.search": "Search",
+  "book.title": "Title",
+  "book.authors": "Authors",
+  "book.year.read": "Year read",
+  "books.search": "Search",
   "projects.title": "Projects",
   "projects.description": "Here you will find the projects I have done in my career as a consultant. The projects are sorted by start date, the most recent one first.",
   "data.title": "Data",
