--- a/src/assets/translation/fr.json
+++ b/src/assets/translation/fr.json
@@ -10,6 +10,7 @@
   "website.cv": "CV",
   "website.projects": "Projets",
   "website.blogposts": "Blogposts",
+  "website.books": "Livres",
   "website.data": "Plus de données",
   "my.vision.what.to.expect.of.me": "Que pouvez-vous attendre de moi?",
   "my.vision.what.is.my.vision": "Le développement de logiciels est un métier!",
@@ -56,11 +57,10 @@
   "cv.education2.title": "Bachelière en Sciences: Informatique, TIC",
   "cv.education2.employer": "Université d'Hasselt",
   "cv.education2.place": "Diepenbeek, Belgique",
-  "data.books.description": "Cliquez ici pour voir tous les livres que j'ai lus depuis le début de ma carrière.",
-  "data.book.title": "Titre",
-  "data.book.authors": "Auteures",
-  "data.book.year.read": "Année de lecture",
-  "data.books.search": "Recherche",
+  "book.title": "Titre",
+  "book.authors": "Auteures",
+  "book.year.read": "Année de lecture",
+  "books.search": "Recherche",
   "projects.title": "Projets",
   "projects.description": "Vous trouverez ici les projets que j'ai réalisés au cours de ma carrière de consultant. Les projets sont triés par date de début, la plus récente en premier.",
   "data.title": "Données",
