--- a/src/assets/translation/nl.json
+++ b/src/assets/translation/nl.json
@@ -10,6 +10,7 @@
   "website.cv": "Curriculum vitae",
   "website.projects": "Projecten",
   "website.blogposts": "Blogposts",
+  "website.books": "Boeken",
   "website.data": "Meer gegevens",
   "my.vision.what.to.expect.of.me": "Wat kun je van mij verwachten?",
   "my.vision.what.is.my.vision": "Software ontwikkeling is een ambacht!",
@@ -56,11 +57,10 @@
   "cv.education2.title": "Bachelor in de Wetenschappen: Computerwetenschappen, ICT",
   "cv.education2.employer": "Universiteit Hasselt",
   "cv.education2.place": "Leuven, België",
-  "data.books.description": "Klik hier om alle boeken te zien die ik sinds het begin van mijn carrière heb gelezen.",
-  "data.book.title": "Titel",
-  "data.book.authors": "Auteurs",
-  "data.book.year.read": "Jaar gelezen",
-  "data.books.search": "Zoek",
+  "book.title": "Titel",
+  "book.authors": "Auteurs",
+  "book.year.read": "Jaar gelezen",
+  "books.search": "Zoek",
   "projects.title": "Projecten",
   "projects.description": "Hier vindt u de projecten die ik in mijn carrière als consultant heb gedaan. De projecten zijn gesorteerd op startdatum, het meest recente eerst.",
   "data.title": "Gegevens",
