--- a/src/assets/translation/en.json
+++ b/src/assets/translation/en.json
@@ -11,7 +11,6 @@
   "website.projects": "Projects",
   "website.blogposts": "Blogposts",
   "website.books": "Books",
-  "website.data": "More data",
   "my.vision.what.to.expect.of.me": "What can you expect of me?",
   "my.vision.what.is.my.vision": "I see Software Development as a craft!",
   "my.vision.what.is.my.mission": "As a Software Craftsman I try to raise the bar for professional software development by practicing it and helping others to learn the craft. I try to apply the values in the Manifesto for Software Craftsmanship in my daily work.",
@@ -63,16 +62,12 @@
   "books.search": "Search",
   "projects.title": "Projects",
   "projects.description": "Here you will find the projects I have done in my career as a consultant. The projects are sorted by start date, the most recent one first.",
-  "data.title": "Data",
-  "data.more.data.coming.soon": "More information will be available soon!",
-  "data.blogposts.description": "Click here to see all blogposts I've written since the start of my career.",
-  "data.blogpost.title": "Title",
-  "data.blogpost.publicationDate": "Date of publication",
-  "data.blogpost.category": "Category",
-  "data.certificates.description": "Click here to see all the certificates that I have obtained during my career as a consultant.",
-  "data.certificate.name": "Name",
-  "data.certificate.issueDate": "Issue date",
-  "data.certificate.organization": "Organisation",
-  "data.certificate.type": "Type",
-  "blogpost.title": "Blogposts"
+  "blogpost.title": "Title",
+  "blogpost.publicationDate": "Date of publication",
+  "blogpost.category": "Category",
+  "certificates.description": "Click here to see all the certificates that I have obtained during my career as a consultant.",
+  "certificate.name": "Name",
+  "certificate.issueDate": "Issue date",
+  "certificate.organization": "Organisation",
+  "certificate.type": "Type"
 }
