--- a/src/assets/translation/fr.json
+++ b/src/assets/translation/fr.json
@@ -11,7 +11,6 @@
   "website.projects": "Projets",
   "website.blogposts": "Blogposts",
   "website.books": "Livres",
-  "website.data": "Plus de données",
   "my.vision.what.to.expect.of.me": "Que pouvez-vous attendre de moi?",
   "my.vision.what.is.my.vision": "Le développement de logiciels est un métier!",
   "my.vision.what.is.my.mission": "En tant qu'artisan de logiciels, j'essaie d'élever la barre du développement de logiciels professionnels en le pratiquant et en aidant les autres à apprendre le métier. J'essaie d'appliquer les valeurs du Manifeste de l'artisanat logiciel dans mon travail quotidien.",
@@ -63,16 +62,11 @@
   "books.search": "Recherche",
   "projects.title": "Projets",
   "projects.description": "Vous trouverez ici les projets que j'ai réalisés au cours de ma carrière de consultant. Les projets sont triés par date de début, la plus récente en premier.",
-  "data.title": "Données",
-  "data.more.data.coming.soon": "Plus d'informations seront bientôt disponibles!",
-  "data.blogposts.description": "Cliquez ici pour voir tous les blogposts que j'ai écrits depuis le début de ma carrière.",
-  "data.blogpost.title": "Titre",
-  "data.blogpost.publicationDate": "Date de publication",
-  "data.blogpost.category": "Catégorie",
-  "data.certificates.description": "Cliquez ici pour voir tous les certificats que j'ai obtenus au cours de ma carrière de consultant.",
-  "data.certificate.name": "Nom",
-  "data.certificate.issueDate": "Date d'émission",
-  "data.certificate.organization": "L'organisation",
-  "data.certificate.type": "Type",
-  "blogpost.title": "Articles de blog"
+  "blogpost.title": "Titre",
+  "blogpost.publicationDate": "Date de publication",
+  "blogpost.category": "Catégorie",
+  "certificate.name": "Nom",
+  "certificate.issueDate": "Date d'émission",
+  "certificate.organization": "L'organisation",
+  "certificate.type": "Type"
 }
