--- a/src/assets/translation/nl.json
+++ b/src/assets/translation/nl.json
@@ -11,7 +11,6 @@
   "website.projects": "Projecten",
   "website.blogposts": "Blogposts",
   "website.books": "Boeken",
-  "website.data": "Meer gegevens",
   "my.vision.what.to.expect.of.me": "Wat kun je van mij verwachten?",
   "my.vision.what.is.my.vision": "Software ontwikkeling is een ambacht!",
   "my.vision.what.is.my.mission": "Als Software Craftsman probeer ik de lat van professionele software ontwikkeling hoger te leggen door het in de praktijk te brengen en anderen te helpen om het vak te leren. Ik probeer de waarden uit het Software Craftsmanship Manifesto toe te passen in mijn dagelijks werk.",
@@ -63,16 +62,11 @@
   "books.search": "Zoek",
   "projects.title": "Projecten",
   "projects.description": "Hier vindt u de projecten die ik in mijn carrière als consultant heb gedaan. De projecten zijn gesorteerd op startdatum, het meest recente eerst.",
-  "data.title": "Gegevens",
-  "data.more.data.coming.soon": "Meer gegevens zullen binnenkort beschikbaar zijn!",
-  "data.blogposts.description": "Klik hier om alle blogposts te zien die ik sinds het begin van mijn carrière heb geschreven.",
-  "data.blogpost.title": "Titel",
-  "data.blogpost.publicationDate": "Publicatiedatum",
-  "data.blogpost.category": "Categorie",
-  "data.certificates.description": "Klik hier om alle certificaten te zien die ik in mijn carrière als consultant heb behaald.",
-  "data.certificate.name": "Naam",
-  "data.certificate.issueDate": "Uitgiftedatum",
-  "data.certificate.organization": "Organisatie",
-  "data.certificate.type": "Type",
-  "blogpost.title": "Blogposts"
+  "blogpost.title": "Titel",
+  "blogpost.publicationDate": "Publicatiedatum",
+  "blogpost.category": "Categorie",
+  "certificate.name": "Naam",
+  "certificate.issueDate": "Uitgiftedatum",
+  "certificate.organization": "Organisatie",
+  "certificate.type": "Type",
 }
