--- a/src/assets/translation/fr.json
+++ b/src/assets/translation/fr.json
@@ -11,6 +11,7 @@
   "website.projects": "Projets",
   "website.blogposts": "Blogposts",
   "website.books": "Livres",
+  "website.certificates": "Certificats",
   "my.vision.what.to.expect.of.me": "Que pouvez-vous attendre de moi?",
   "my.vision.what.is.my.vision": "Le développement de logiciels est un métier!",
   "my.vision.what.is.my.mission": "En tant qu'artisan de logiciels, j'essaie d'élever la barre du développement de logiciels professionnels en le pratiquant et en aidant les autres à apprendre le métier. J'essaie d'appliquer les valeurs du Manifeste de l'artisanat logiciel dans mon travail quotidien.",
