--- a/src/assets/translation/nl.json
+++ b/src/assets/translation/nl.json
@@ -11,6 +11,7 @@
   "website.projects": "Projecten",
   "website.blogposts": "Blogposts",
   "website.books": "Boeken",
+  "website.certificates": "Certificaten",
   "my.vision.what.to.expect.of.me": "Wat kun je van mij verwachten?",
   "my.vision.what.is.my.vision": "Software ontwikkeling is een ambacht!",
   "my.vision.what.is.my.mission": "Als Software Craftsman probeer ik de lat van professionele software ontwikkeling hoger te leggen door het in de praktijk te brengen en anderen te helpen om het vak te leren. Ik probeer de waarden uit het Software Craftsmanship Manifesto toe te passen in mijn dagelijks werk.",
