--- a/src/assets/translation/en.json
+++ b/src/assets/translation/en.json
@@ -11,6 +11,7 @@
   "website.projects": "Projects",
   "website.blogposts": "Blogposts",
   "website.books": "Books",
+  "website.certificates": "Certificates",
   "my.vision.what.to.expect.of.me": "What can you expect of me?",
   "my.vision.what.is.my.vision": "I see Software Development as a craft!",
   "my.vision.what.is.my.mission": "As a Software Craftsman I try to raise the bar for professional software development by practicing it and helping others to learn the craft. I try to apply the values in the Manifesto for Software Craftsmanship in my daily work.",
