add book covers.

--- a/src/assets/translation/en.json
+++ b/src/assets/translation/en.json
@@ -70,5 +70,6 @@
   "certificate.name": "Name",
   "certificate.issueDate": "Issue date",
   "certificate.organization": "Organisation",
-  "certificate.type": "Type"
+  "certificate.type": "Type",
+  "book.cover": "Cover"
 }
