--- a/src/assets/translation/nl.json
+++ b/src/assets/translation/nl.json
@@ -69,5 +69,6 @@
   "certificate.name": "Naam",
   "certificate.issueDate": "Uitgiftedatum",
   "certificate.organization": "Organisatie",
-  "certificate.type": "Type"
+  "certificate.type": "Type",
+  "book.cover": "Omslag"
 }
